package io.github.sasori_256.town_planning.common.ui.buildPreview.controller;

import java.awt.event.ActionListener;

public class BuildRotate implements ActionListener {
  @Override
  public void actionPerformed(java.awt.event.ActionEvent e) {
    // Implement rotation logic here
  }
}
